--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "youtubedl-media-server",
+  "name": "youtubedl-cast",
   "version": "0.0.1",
-  "description": "HTTP server that takes URLs and plays them using youtube-dl + your media player.",
+  "description": "Play videos on tabs on your TV using youtube-dl."
   "main": "index.js",
   "bin": "./index.js",
   "scripts": {
