--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "youtubedl-cast",
   "version": "0.0.1",
-  "description": "Play videos on tabs on your TV using youtube-dl."
+  "description": "Play videos on tabs on your TV using youtube-dl.",
   "main": "index.js",
   "bin": "./index.js",
   "scripts": {
