--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "mkfifo": "0.1.4",
     "node-mplayer": "0.0.3",
+    "omx-controller": "0.0.2",
     "routes": "~1.2.0",
     "tmp": "0.0.24",
     "youtube-dl": "^1.10.5"
