--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "omx-controller": "0.0.2",
     "routes": "~1.2.0",
     "tmp": "0.0.24",
-    "youtube-dl": "^1.10.5"
+    "ytdl-core": "^0.7.8"
   }
 }
